--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,86 +8,141 @@ services:
     volumes:
       - "./nginx/html:/usr/share/nginx/html:ro"
 
-  master:
-    container_name: master
-    image: arjones/pyspark:2.4.5
-    restart: always
-    command: ["/opt/spark/sbin/start-master.sh"]
-    environment:
-      MASTER: spark://master:7077
-      SPARK_NO_DAEMONIZE: 1
-    ports:
-      - 4040:4040
-      - 6066:6066
-      - 7077:7077
-      - 8080:8080
-    volumes:
-      - ./code:/app
-      - ./dataset:/dataset
+  # master:
+  #   container_name: master
+  #   image: arjones/pyspark:2.4.5
+  #   restart: always
+  #   command: ["/opt/spark/sbin/start-master.sh"]
+  #   environment:
+  #     MASTER: spark://master:7077
+  #     SPARK_NO_DAEMONIZE: 1
+  #   ports:
+  #     - 4040:4040
+  #     - 6066:6066
+  #     - 7077:7077
+  #     - 8080:8080
+  #   volumes:
+  #     - ./code:/app
+  #     - ./dataset:/dataset
 
-  worker1:
-    container_name: worker1
-    image: arjones/pyspark:2.4.5
-    restart: always
-    command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077", "--memory", "512m", "--cores", "2"]
-    environment:
-      MASTER: spark://master:7077
-      SPARK_NO_DAEMONIZE: 1
-    depends_on:
-      - master
-    ports:
-      - 4041:4040
-      - "6066"
-      - "7077"
-      - 8081:8080
-    volumes:
-      - ./code:/app
-      - ./dataset:/dataset
+  # worker1:
+  #   container_name: worker1
+  #   image: arjones/pyspark:2.4.5
+  #   restart: always
+  #   command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077", "--memory", "512m", "--cores", "2"]
+  #   environment:
+  #     MASTER: spark://master:7077
+  #     SPARK_NO_DAEMONIZE: 1
+  #   depends_on:
+  #     - master
+  #   ports:
+  #     - 4041:4040
+  #     - "6066"
+  #     - "7077"
+  #     - 8081:8080
+  #   volumes:
+  #     - ./code:/app
+  #     - ./dataset:/dataset
 
-  worker2:
-    container_name: worker2
-    image: arjones/pyspark:2.4.5
-    restart: always
-    command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077", "--memory", "512m", "--cores", "2"]
-    environment:
-      MASTER: spark://master:7077
-      SPARK_NO_DAEMONIZE: 1
-    depends_on:
-      - master
-    ports:
-      - 4042:4040
-      - "6066"
-      - "7077"
-      - 8082:8080
-    volumes:
-      - ./code:/app
-      - ./dataset:/dataset
+  # worker2:
+  #   container_name: worker2
+  #   image: arjones/pyspark:2.4.5
+  #   restart: always
+  #   command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077", "--memory", "512m", "--cores", "2"]
+  #   environment:
+  #     MASTER: spark://master:7077
+  #     SPARK_NO_DAEMONIZE: 1
+  #   depends_on:
+  #     - master
+  #   ports:
+  #     - 4042:4040
+  #     - "6066"
+  #     - "7077"
+  #     - 8082:8080
+  #   volumes:
+  #     - ./code:/app
+  #     - ./dataset:/dataset
 
-  jupyter:
-    container_name: jupyter
-    image: arjones/pyspark:2.4.5
-    restart: always
-    environment:
-      MASTER: spark://master:7077
-    depends_on:
-      - master
-    ports:
-      - "8888:8888"
-    volumes:
-      - ./jupyter/notebook:/notebook
-      - ./dataset:/dataset
-      - ./code:/app
+  # worker3:
+  #   container_name: worker3
+  #   image: arjones/pyspark:2.4.5
+  #   restart: always
+  #   command: ["/opt/spark/sbin/start-slave.sh", "spark://master:7077", "--memory", "512m", "--cores", "2"]
+  #   environment:
+  #     MASTER: spark://master:7077
+  #     SPARK_NO_DAEMONIZE: 1
+  #   depends_on:
+  #     - master
+  #   ports:
+  #     - 4043:4040
+  #     - "6066"
+  #     - "7077"
+  #     - 8083:8080
+  #   volumes:
+  #     - ./code:/app
+  #     - ./dataset:/dataset
 
-  kafka:
-    container_name: kafka
-    image: spotify/kafka
-    restart: always
+  # jupyter:
+  #   container_name: jupyter
+  #   image: arjones/pyspark:2.4.5
+  #   restart: always
+  #   environment:
+  #     MASTER: spark://master:7077
+  #   depends_on:
+  #     - master
+  #   ports:
+  #     - "8888:8888"
+  #   volumes:
+  #     - ./jupyter/notebook:/notebook
+  #     - ./dataset:/dataset
+  #     - ./code:/app
+
+  # kafka:
+  #   container_name: kafka
+  #   image: spotify/kafka
+  #   restart: always
+  #   ports:
+  #     - "2181:2181"
+  #     - "9092:9092"
+  #   environment:
+  #     ADVERTISED_HOST: kafka
+  #     ADVERTISED_PORT: 9092
+
+  zoo1:
+    image: confluentinc/cp-zookeeper:7.3.2
+    hostname: zoo1
+    container_name: zoo1
     ports:
       - "2181:2181"
-      - "9092:9092"
     environment:
-      ADVERTISED_HOST: kafka
-      ADVERTISED_PORT: 9092
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_SERVER_ID: 1
+      ZOOKEEPER_SERVERS: zoo1:2888:3888
+
+  kafka:
+    image: confluentinc/cp-kafka:7.3.2
+    hostname: kafka
+    container_name: kafka
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+      - "9999:9999"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
+      KAFKA_BROKER_ID: 1
+      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_JMX_PORT: 9001
+      KAFKA_JMX_HOSTNAME: kafka
+      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.authorizer.AclAuthorizer
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: "true"
+    depends_on:
+      - zoo1
 
   postgres:
     container_name: postgres
@@ -108,21 +163,21 @@ services:
     image: redis
     restart: always
 
-  superset:
-    container_name: superset
-    image: amancevice/superset
-    restart: always
-    depends_on:
-      - redis
-      - postgres
-    environment:
-      MAPBOX_API_KEY: ${MAPBOX_API_KEY}
-      SUPERSET_HOME: /etc/superset
-    ports:
-      - "8088:8088"
-    volumes:
-      - ./superset/conf/superset_config.py:/etc/superset/superset_config.py
-      - superset:/var/lib/superset
+  # superset:
+  #   container_name: superset
+  #   image: amancevice/superset
+  #   restart: always
+  #   depends_on:
+  #     - redis
+  #     - postgres
+  #   environment:
+  #     MAPBOX_API_KEY: ${MAPBOX_API_KEY}
+  #     SUPERSET_HOME: /etc/superset
+  #   ports:
+  #     - "8088:8088"
+  #   volumes:
+  #     - ./superset/conf/superset_config.py:/etc/superset/superset_config.py
+  #     - superset:/var/lib/superset
 
   postgres-airflow:
     container_name: postgres-airflow
@@ -182,7 +237,7 @@ services:
       # MINIO_NOTIFY_KAFKA_CLIENT_TLS_KEY_LANDING: "<string>"
       # MINIO_NOTIFY_KAFKA_QUEUE_DIR_LANDING: "<string>"
       # MINIO_NOTIFY_KAFKA_QUEUE_LIMIT_LANDING: "<string>"
-      MINIO_NOTIFY_KAFKA_VERSION_LANDING: "0.10.1.0"
+      # MINIO_NOTIFY_KAFKA_VERSION_LANDING: "0.10.1.0"
       # MINIO_NOTIFY_KAFKA_COMMENT_LANDING: "<string>"
     command: server /data --console-address ":9091"
 
